# hs-toxcore

./: BUILD.bazel  Makefile  hstox.cabal  toxcore.cabal
src/: Tox.lhs
src/Tox/: Crypto.lhs  DHT.lhs  Network.lhs  Persistence.lhs  Toxcore.lhs
src/Tox/Application/: GroupChat.lhs  GroupChatPackets.lhs  LegacyGroup.lhs  State.hs
src/Tox/Conduit/: DHT.hs  Encoding.hs  Network.hs
src/Tox/Core/: Bits.hs  PingArray.lhs  Time.hs  Timed.hs  TypeName.hs
src/Tox/Core/Bits/: Get.hs  Put.hs
src/Tox/Crypto/: Box.lhs  CombinedKey.lhs  Core.lhs  Key.lhs  KeyPair.lhs  Keyed.hs  KeyedT.hs  Nonce.lhs
src/Tox/Crypto/Core/: Box.lhs  CombinedKey.lhs  Hash.lhs  Key.lhs  KeyPair.lhs  Keyed.hs  MonadRandomBytes.hs  Nonce.lhs
src/Tox/DHT/: ClientList.lhs  ClientNode.lhs  DhtPacket.lhs  DhtRequestPacket.lhs  DhtState.lhs  Distance.lhs  KBuckets.lhs  Node.hs  NodeList.lhs  NodesRequest.lhs  NodesResponse.lhs  Operation.lhs  PendingReplies.lhs  PingPacket.lhs  RpcPacket.lhs  Server.hs  Stamped.hs
src/Tox/Network/: Backend.lhs  Binary.hs  Core.lhs  Encoding.hs  HostAddress.lhs  MonadRandomBytes.hs  Networked.hs  NodeInfo.lhs  Packet.lhs  PacketKind.lhs  PortNumber.lhs  Protocol.lhs  SocketAddress.lhs  TimedT.hs  TransportProtocol.lhs
src/Tox/Network/Core/: Backend.lhs  Encoding.hs  HostAddress.lhs  MonadRandomBytes.hs  Networked.hs  NodeInfo.lhs  Packet.lhs  PacketKind.lhs  PortNumber.lhs  Protocol.lhs  SocketAddress.lhs  TimedT.hs  TransportProtocol.lhs
src/Tox/Network/Discovery/: LAN.lhs
src/Tox/Network/TCP/: Client.lhs  Connections.lhs  Server.lhs
src/Tox/Onion/: Operation.lhs  Path.lhs  RPC.lhs  Tunnel.lhs
src/Tox/Persistence/: Bytes.lhs  Conferences.lhs  DHT.lhs  Friend.lhs  Groups.lhs  Nodes.hs  Util.hs
src/Tox/Session/: Connection.lhs  Friend.lhs
src/Tox/Transport/: Reliability.lhs  SecureSession.lhs  Stream.lhs
src/Tox/Transport/SecureSession/: Manager.hs
src/tox/Network/: Tox.lhs
src/tox/Network/Tox/Crypto/: Key.lhs
src/tox/Network/Tox/NodeInfo/: HostAddress.lhs  NodeInfo.lhs  SocketAddress.lhs
test/Tox/: CryptoSpec.hs  DHTSpec.hs  OnionPacketSpec.hs  PersistenceSpec.hs  SpecComplianceSpec.hs
test/Tox/Core/: BitsSpec.hs  TimeSpec.hs
test/Tox/Core/Bits/: GetSpec.hs  PutSpec.hs
test/Tox/Crypto/: BoxSpec.hs  CombinedKeySpec.hs  CoreSpec.hs  KeyPairSpec.hs  KeySpec.hs  NonceSpec.hs
test/Tox/Crypto/Core/: BoxSpec.hs  CombinedKeySpec.hs  KeyPairSpec.hs  KeySpec.hs  MonadRandomBytesSpec.hs  NonceSpec.hs
test/Tox/DHT/: ClientListSpec.hs  ClientNodeSpec.hs  DhtPacketSpec.hs  DhtRequestPacketSpec.hs  DhtStateSpec.hs  DistanceSpec.lhs  KBucketsSpec.hs  NodeListSpec.hs  NodeSpec.hs  NodesRequestSpec.hs  NodesResponseSpec.hs  OperationSpec.hs  PendingRepliesSpec.hs  PingPacketSpec.hs  RpcPacketSpec.hs  ServerSpec.hs  StampedSpec.hs
test/Tox/Network/: EncodingSpec.hs  HostAddressSpec.hs  MonadRandomBytesSpec.hs  NodeInfoSpec.hs  PacketKindSpec.hs  PacketSpec.hs  PortNumberSpec.hs  ProtocolSpec.hs  SocketAddressSpec.hs  TransportProtocolSpec.hs
test/Tox/Network/Core/: EncodingSpec.hs  HostAddressSpec.hs  MonadRandomBytesSpec.hs  NodeInfoSpec.hs  PacketKindSpec.hs  PacketSpec.hs  PortNumberSpec.hs  ProtocolSpec.hs  SocketAddressSpec.hs  TransportProtocolSpec.hs
test/Tox/Onion/: OperationSpec.hs  PathSpec.hs  RPCSpec.hs  TunnelSpec.hs
test/Tox/Persistence/: BytesSpec.hs  ConferencesSpec.hs  DHTSpec.hs  FriendSpec.hs  GroupsSpec.hs  NodesSpec.hs
test/Tox/Transport/: ReliabilitySpec.hs  SecureSessionSpec.hs  StreamSpec.hs
tools/: BUILD.bazel  build-docs  tox-dht-node.hs  tox-e2e-test.hs  toxsave-convert.hs  toxsave-test.hs
web/: BUILD.bazel  webservice.hs
web/Tox/: App.hs
