load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//third_party/pandoc:build_defs.bzl", "pandoc_doc")
load("//tools/project:build_defs.bzl", "project")

project(
    custom_cirrus = True,
    license = "gpl3-https",
)

haskell_library(
    name = "tox-tcp",
    srcs = glob([
        "src/Tox/Network/TCP/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:base",
    ],
)

haskell_library(
    name = "tox-discovery",
    srcs = glob([
        "src/Tox/Network/Discovery/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:base",
    ],
)

haskell_library(
    name = "tox-transport",
    srcs = glob([
        "src/Tox/Transport/**/*.hs",
        "src/Tox/Transport/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:clock",
        "//third_party/haskell:containers",
        "//third_party/haskell:mtl",
        "//third_party/haskell:saltine",
    ],
)

haskell_library(
    name = "tox-onion",
    srcs = glob([
        "src/Tox/Onion/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        "//hs-msgpack-binary",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:saltine",
    ],
)

haskell_library(
    name = "tox-session",
    srcs = glob([
        "src/Tox/Session/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        ":tox-onion",
        ":tox-transport",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:mtl",
    ],
)

haskell_library(
    name = "hs-toxcore",
    srcs = glob(
        ["src/Tox/*.lhs"],
        exclude = [
            "src/Tox/DHT.lhs",
            "src/Tox/Persistence.lhs",
        ],
    ),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    version = "0.2.12",
    visibility = ["//visibility:public"],
    deps = [
        ":tox-application",
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-discovery",
        ":tox-network",
        ":tox-onion",
        ":tox-persistence",
        ":tox-session",
        ":tox-tcp",
        ":tox-transport",
        "//third_party/haskell:base",
    ],
)

haskell_library(
    name = "tox-core",
    srcs = glob([
        "src/Tox/Core/**/*.hs",
        "src/Tox/Core/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:clock",
        "//third_party/haskell:containers",
        "//third_party/haskell:mtl",
    ],
)

haskell_library(
    name = "tox-crypto",
    srcs = ["src/Tox/Crypto/Core.lhs"] + glob([
        "src/Tox/Crypto/Core/**/*.hs",
        "src/Tox/Crypto/Core/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:base16-bytestring",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:entropy",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:random",
        "//third_party/haskell:saltine",
        "//third_party/haskell:transformers",
    ],
)

haskell_library(
    name = "tox-network",
    srcs = ["src/Tox/Network/Core.lhs"] + glob([
        "src/Tox/Network/Core/**/*.hs",
        "src/Tox/Network/Core/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:iproute",
        "//third_party/haskell:mtl",
        "//third_party/haskell:network",
        "//third_party/haskell:random",
        "//third_party/haskell:transformers",
    ],
)

haskell_library(
    name = "tox-dht",
    srcs = ["src/Tox/DHT.lhs"] + glob([
        "src/Tox/DHT/**/*.hs",
        "src/Tox/DHT/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-network",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:integer-gmp",
        "//third_party/haskell:lens-family",
        "//third_party/haskell:mtl",
        "//third_party/haskell:random",
        "//third_party/haskell:saltine",
        "//third_party/haskell:transformers",
    ],
)

haskell_library(
    name = "tox-persistence",
    srcs = ["src/Tox/Persistence.lhs"] + glob([
        "src/Tox/Persistence/**/*.hs",
        "src/Tox/Persistence/**/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:saltine",
    ],
)

haskell_library(
    name = "tox-application",
    srcs = glob([
        "src/Tox/Application/*.hs",
        "src/Tox/Application/*.lhs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-conduit",
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        ":tox-onion",
        ":tox-session",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:network",
    ],
)

haskell_library(
    name = "tox-conduit",
    srcs = glob([
        "src/Tox/Conduit/*.hs",
    ]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:conduit",
        "//third_party/haskell:conduit-extra",
        "//third_party/haskell:mtl",
        "//third_party/haskell:network",
        "//third_party/haskell:transformers",
    ],
)

pandoc_doc(
    name = "tox-spec",
    src = "src/Tox/Toxcore.lhs",
    out = "tox-spec.md",
    data = glob([
        "src/**/*.lhs",
        "test/**/*.lhs",
    ]),
    title = "The Tox Reference",
)

hspec_test(
    name = "testsuite",
    ghcopts = ["-j4"],
    deps = [
        ":hs-toxcore",
        ":tox-application",
        ":tox-core",
        ":tox-crypto",
        ":tox-dht",
        ":tox-network",
        ":tox-onion",
        ":tox-persistence",
        ":tox-transport",
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//third_party/haskell:MonadRandom",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:async",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:clock",
        "//third_party/haskell:containers",
        "//third_party/haskell:hspec",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:random",
        "//third_party/haskell:saltine",
        "//third_party/haskell:text",
    ],
)
