name:          toxcore
synopsis:      A Tox protocol implementation in Haskell
version:       0.2.12
cabal-version: >=1.10
license:       GPL-3
license-file:  LICENSE
build-type:    Simple
author:        iphy
maintainer:    iphy
copyright:     Copyright (c) 2016-2020 The TokTok Team
homepage:      https://toktok.ltd
category:      Network
description:   A Tox protocol implementation in Haskell

source-repository head
  type:     git
  location: https://github.com/TokTok/hs-toxcore

flag library-only
  description: Build only library, no executables or tests.
  default:     False

flag webservice
  description: Build the toxsave parser webservice.
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Tox.Toxcore
    Tox.Application.GroupChat
    Tox.Application.GroupChatPackets
    Tox.Application.LegacyGroup
    Tox.Core.Bits
    Tox.Core.Bits.Get
    Tox.Core.Bits.Put
    Tox.Core.PingArray
    Tox.Core.Time
    Tox.Core.Timed
    Tox.Core.TypeName
    Tox.Crypto.Core
    Tox.Crypto.Core.Box
    Tox.Crypto.Core.CombinedKey
    Tox.Crypto.Core.Hash
    Tox.Crypto.Core.Key
    Tox.Crypto.Core.KeyPair
    Tox.Crypto.Core.Keyed
    Tox.Crypto.Core.MonadRandomBytes
    Tox.Crypto.Core.Nonce
    Tox.Conduit.DHT
    Tox.Conduit.Encoding
    Tox.Conduit.Network
    Tox.DHT
    Tox.DHT.ClientList
    Tox.DHT.ClientNode
    Tox.DHT.DhtPacket
    Tox.DHT.DhtRequestPacket
    Tox.DHT.DhtState
    Tox.DHT.Distance
    Tox.DHT.KBuckets
    Tox.DHT.NodeList
    Tox.DHT.NodesRequest
    Tox.DHT.NodesResponse
    Tox.DHT.Operation
    Tox.DHT.PendingReplies
    Tox.DHT.PingPacket
    Tox.DHT.RpcPacket
    Tox.DHT.Server
    Tox.DHT.Stamped
    Tox.Network.Core
    Tox.Network.Core.Backend
    Tox.Network.Discovery.LAN
    Tox.Network.Core.Encoding
    Tox.Network.Core.HostAddress
    Tox.Network.Core.Networked
    Tox.Network.Core.NodeInfo
    Tox.Network.Core.Packet
    Tox.Network.Core.PacketKind
    Tox.Network.Core.PortNumber
    Tox.Network.Core.Protocol
    Tox.Network.Core.SocketAddress
    Tox.Network.TCP.Client
    Tox.Network.TCP.Connections
    Tox.Network.TCP.Server
    Tox.Network.Core.TimedT
    Tox.Network.Core.TransportProtocol
    Tox.Onion.Path
    Tox.Onion.RPC
    Tox.Onion.Tunnel
    Tox.Persistence
    Tox.Persistence.Bytes
    Tox.Persistence.Conferences
    Tox.Persistence.DHT
    Tox.Persistence.Friend
    Tox.Persistence.Groups
    Tox.Persistence.Nodes
    Tox.Persistence.Util
    Tox.Session.Connection
    Tox.Session.Friend
    Tox.Transport.Reliability
    Tox.Transport.SecureSession
    Tox.Transport.SecureSession.Manager
    Tox.Transport.Stream

  build-depends:
      base               <5
    , base16-bytestring  >=1
    , binary
    , bytestring
    , clock              >=0.3    && <0.8.4.0
    , conduit
    , conduit-extra
    , containers
    , entropy
    , integer-gmp
    , iproute
    , lens-family
    , monad-validate
    , MonadRandom
    , msgpack-arbitrary
    , msgpack-binary     >=0.0.12
    , msgpack-types
    , mtl
    , network
    , QuickCheck         >=2.9.1
    , random             <1.3
    , saltine            >=0.2
    , transformers

executable toxsave-convert
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          toxsave-convert.hs
  build-depends:
      base        <5
    , binary
    , bytestring
    , groom
    , text
    , toxcore

executable webservice
  main-is:          webservice.hs
  ghc-options:      -Wall
  hs-source-dirs:   web
  default-language: Haskell2010
  other-modules:    Tox.App

  if flag(library-only) || !flag(webservice)
    buildable: False

  build-depends:
      base            >=4   && <5
    , binary
    , bytestring
    , groom
    , msgpack-binary
    , QuickCheck
    , servant         >=0.5
    , servant-server  >=0.5
    , toxcore
    , wai
    , wai-cors
    , warp

test-suite testsuite
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  ghc-options:        -Wall
  main-is:            testsuite.hs
  other-modules:
    Data.Result
    Tox.Core.Bits.GetSpec
    Tox.Core.Bits.PutSpec
    Tox.Core.BitsSpec
    Tox.Core.TimeSpec
    Tox.Crypto.Core.BoxSpec
    Tox.Crypto.Core.CombinedKeySpec
    Tox.Crypto.Core.KeyPairSpec
    Tox.Crypto.Core.KeySpec
    Tox.Crypto.Core.MonadRandomBytesSpec
    Tox.Crypto.Core.NonceSpec
    Tox.Crypto.CoreSpec
    Tox.DHT.ClientListSpec
    Tox.DHT.ClientNodeSpec
    Tox.DHT.DhtPacketSpec
    Tox.DHT.DhtRequestPacketSpec
    Tox.DHT.DhtStateSpec
    Tox.DHT.DistanceSpec
    Tox.DHT.KBucketsSpec
    Tox.DHT.NodeListSpec
    Tox.DHT.NodesRequestSpec
    Tox.DHT.NodesResponseSpec
    Tox.DHT.OperationSpec
    Tox.DHT.PendingRepliesSpec
    Tox.DHT.PingPacketSpec
    Tox.DHT.RpcPacketSpec
    Tox.DHT.ServerSpec
    Tox.DHT.StampedSpec
    Tox.DHTSpec
    Tox.Network.Core.EncodingSpec
    Tox.Network.Core.HostAddressSpec
    Tox.Network.Core.NodeInfoSpec
    Tox.Network.Core.PacketKindSpec
    Tox.Network.Core.PacketSpec
    Tox.Network.Core.PortNumberSpec
    Tox.Network.Core.ProtocolSpec
    Tox.Network.Core.SocketAddressSpec
    Tox.Network.Core.TransportProtocolSpec
    Tox.Onion.PathSpec
    Tox.Onion.TunnelSpec
    Tox.Onion.RPCSpec
    Tox.Persistence.BytesSpec
    Tox.Persistence.ConferencesSpec
    Tox.Persistence.DHTSpec
    Tox.Persistence.FriendSpec
    Tox.Persistence.GroupsSpec
    Tox.Persistence.NodesSpec
    Tox.PersistenceSpec
    Tox.Transport.ReliabilitySpec
    Tox.Transport.SecureSessionSpec
    Tox.Transport.StreamSpec

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      async
    , base            <5
    , binary
    , bytestring
    , clock
    , containers
    , hspec
    , monad-validate
    , MonadRandom
    , msgpack-binary
    , msgpack-types   >=0.2 && <0.4
    , mtl
    , QuickCheck
    , random
    , saltine
    , text
    , toxcore
