load("@rules_haskell//haskell:defs.bzl", "haskell_binary", "haskell_test")

haskell_binary(
    name = "toxsave-convert",
    srcs = ["toxsave-convert.hs"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//hs-toxcore",
        "//hs-toxcore:tox-persistence",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
    ],
)

haskell_test(
    name = "toxsave-test",
    size = "small",
    srcs = ["toxsave-test.hs"],
    ghcopts = ["-optl=-fsanitize=address"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//tools/haskell:__pkg__"],
    deps = [
        "//c-toxcore",
        "//hs-toxcore",
        "//hs-toxcore:tox-persistence",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
    ],
)

haskell_binary(
    name = "tox-dht-node",
    srcs = ["tox-dht-node.hs"],
    ghcopts = ["-j4"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-msgpack-binary",
        "//hs-msgpack-types",
        "//hs-toxcore",
        "//hs-toxcore:tox-conduit",
        "//hs-toxcore:tox-core",
        "//hs-toxcore:tox-crypto",
        "//hs-toxcore:tox-crypto-keyed",
        "//hs-toxcore:tox-dht",
        "//hs-toxcore:tox-network",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:base16-bytestring",
        "//third_party/haskell:binary",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:conduit",
        "//third_party/haskell:conduit-extra",
        "//third_party/haskell:containers",
        "//third_party/haskell:http-conduit",
        "//third_party/haskell:iproute",
        "//third_party/haskell:monad-validate",
        "//third_party/haskell:mtl",
        "//third_party/haskell:network",
        "//third_party/haskell:random",
        "//third_party/haskell:resourcet",
        "//third_party/haskell:saltine",
        "//third_party/haskell:text",
        "//third_party/haskell:transformers",
    ],
)
